# z2jh-cost-estimator

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  Simulation_50.ipynb  setup.cfg  setup.py  test_input_form.ipynb  test_simulator_package.ipynb
Z2jh_notebooks/: test_input_form.ipynb
notebooks/: test_simulator_package.ipynb
z2jh_cost_simulator/: generate_user_activity.py  input_form.py  simulator.py
z2jh_cost_simulator/tests/: test_generate_user_activity.py  test_simulator.py
