[metadata]
name = z2jh-cost-simulator-consideratio
summary = A library to simulate the cost of running a JupyterHub on Kubernetes, see z2jh.jupyter.org.
# homepage = https://github.com/consideratio/discourse-sso-oidc-bridge
author = Sunita Anand, Erik Sundell
author-email = erik.i.sundell@gmail.com
description-file = README.md
description-content-type = text/markdown
license = MIT
classifier =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
